createObjectURL deprecated - https://stackoverflow.com/questions/51101408

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			// Get access to the camera
 			if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
 				navigator.mediaDevices.getUserMedia({ video: true }).then(function (stream) {
-					video.src = window.URL.createObjectURL(stream);
+					video.srcObject = stream;
 					video.play();
 				});
 			}
